<resources>
    <string name="app_name">InvoiceHub</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="new_estimate">New Estimate</string>
    <string name="new_item">New Item</string>
    <string name="new_folder">New Folder</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="folder_name">Folder Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="items">Items</string>
    <string name="total">Total</string>
    <string name="qty">Qty</string>
    <string name="add_items">Add Items</string>
    <string name="send">Send</string>
    <string name="open_pdf">Open Pdf</string>
    <string name="save_invoice">Save Invoice</string>
    <string name="open_externally">Open Externally</string>
    <string name="estimates">Estimates</string>
    <string name="clients">Clients</string>
    <string name="client_name">Client Name</string>
    <string name="organization">Organization</string>
    <string name="title">Title</string>
    <string name="phone_number_1">Phone Number 1</string>
    <string name="phone_number_2">Phone Number 2</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Address</string>
    <string name="view">VIEW</string>
    <string name="client">Client</string>
    <string name="save">Save</string>
    <string name="delete_items">"Delete Items"</string>
    <string name="delete_client">Delete Client</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="delete_client_dialog">Are you sure you want to delete this Client\n you can\'t undo this</string>
    <string name="delete_items_dialog">Are you sure you want to delete %s item\n you can\'t undo this</string>
    <string name="empty_folder">Empty folder\nadd items from the options menu</string>
    <string name="empty_clients">Your Clients will Show Here</string>
    <string name="empty_invoices">Your Invoices/Estimates will Show Here</string>
    <string name="date_format">Date Format</string>
    <string name="currency">Currency</string>
    <string name="company_info">Company Info</string>
    <string name="settings">Settings</string>
    <string name="company_name">Company Name</string>
    <string name="person_name">Person Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_database">Save to database</string>
    <string name="folder">Folder</string>
    <string name="item">Item</string>
    <string name="database">Database</string>
    <string name="choose_items">Choose Items</string>
    <string name="choose_client">Choose Client</string>
    <string name="pdf_preview">Pdf Preview</string>
    <string name="client_view">Client View</string>
    <string name="choose_format">Choose Date Format</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="reports">Reports</string>
    <string name="subscribe">Subscribe</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="renewed_unless_canceled">Your Subscription Will be auto renewed unless canceled</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="you_are_subscribed">You are Subscribed</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="month">/ Month</string>
    <string name="monthly_features">Enjoy Unlimited number of Invoices</string>
    <string name="yearly_subscription">Yearly Subscription</string>
    <string name="per_year">/ Year</string>
    <string name="yearly_features">Save more than 25%</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="total_number_of_drafts" translatable="false">Total Number of Drafts</string>
    <string name="total_number_of_invoices" translatable="false">Total Number of Invoices</string>
    <string name="money_total" translatable="false">Money Total</string>
    <string name="total_number_of_estimates" translatable="false">Total Number of Estimates</string>
    <string name="export">Export</string>
    <string name="import_string">Import</string>
    <string name="warning">Warning</string>
    <string name="importing_dialog">Existing data will be overwritten are you sure you want to proceed</string>
    <string name="proceed">Proceed</string>

    <string name="ad_mob_banner_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_mob_interstitial_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="ad_mob_banner" translatable="false">ca-app-pub-2521710064847894/6825744755</string>
    <string name="ad_mob_interstitial" translatable="false">ca-app-pub-2521710064847894/2886499745</string>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-2521710064847894~5886437294</string>
    <string name="open_report_as_excel">Open Report as Excel</string>
    <string name="estimate">Estimate</string>
    <string name="invoices">Invoices</string>
    <string name="copy" translatable="false">Copy</string>
    <string name="import_here" translatable="false">Import Here</string>
    <string name="folder_discount">Discount (optional)</string>
    <string name="folder_discount_message">This discount will be applied to all the sub items</string>
    <string name="your_name">Your Name</string>
    <string name="your_role">Your Role</string>
    <string name="none">None</string>
    <string name="server">Server</string>
    <string name="title_activity_new_start" translatable="false">NewStartActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="network_settings">Network Settings</string>


</resources>