<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/myEstimate"
        android:title="@string/estimates"
        android:icon="@drawable/ic_invoice"/>

    <item
        android:id="@+id/myClients"
        android:title="@string/clients"
        android:icon="@drawable/ic_client"/>

    <item
        android:id="@+id/reports"
        android:title="@string/reports"
        android:icon="@drawable/ic_analysis"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>

    <item
        android:id="@+id/subscribe"
        android:title="@string/subscribe"
        android:icon="@drawable/ic_star"/>



</menu>