<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_settings.presentation.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/tv_date_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_format"
            android:padding="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:padding="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_company_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_info"
            android:padding="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</ScrollView>