<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.new_estimate.NewEstimateFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp"
        android:clipToPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/adapter_new_estimate"
            />

        <Button
            android:id="@+id/add_items"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_items"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:padding="16dp"
                android:textSize="20sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/items_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="200"
                android:padding="16dp"
                android:textSize="16sp"
                android:gravity="end"/>


        </LinearLayout>

    </LinearLayout>





    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:contentDescription="Save"
        android:src="@drawable/pdf_icon" />


</FrameLayout>